# Twin

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  DATABASE.md  OVERNIGHT_LOG.md  README.md  implementation.md  implementation_plan.md  mongodb-atlas-features-use-cases.md  mongodb-setup-guide.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
analysis/: agent_exec.py
atlas/: search-indexes.json
data/: ingest.py  ingest_anes_openends.py  ingest_census.py  ingest_ces.py  ingest_opinionqa_grpo.py  ingest_polis.py  ingest_pumf.py  ingest_toronto_consultation.py  ingest_wikipedia_narratives.py  pumf_codebook.py  reverbalize_sft_personas.py  toronto_ckan.py
db/: package-lock.json  package.json
docs/: techto-implementation.md
e2e/: backboard-control-room.spec.ts  dashboard.spec.ts  techto.spec.ts  twinto.spec.ts  world-ui.spec.ts
eval/: calibration.py  eval_grpo_checkpoint.py  eval_grpo_step40.py  heatmap_phase1.py  persona_data_plots.py  retrodiction.py  smoke_persona_text.py  smoke_sft_generations.py  spatial_counterfactual.py
model/: serving.py
population/: build_neighbourhood_cohorts.py  generate_and_store_personas.py  generate_personas.py  ipf_fit.py  persona_text.py  sampler.py
scripts/: backboard-bootstrap.ts  backboard-cleanup-gridtwin.ts  backboard-consolidate-roster.ts  backboard-status.ts  copy-cesium-assets.mjs  mongo-bootstrap.ts  (+2 more)
services/transit-core/: README.md  pyproject.toml
services/transit-core/app/: __init__.py  config.py  main.py
(+356 files in other folders)
