[project]
name = "techto-transit-core"
version = "0.1.0"
description = "TechTO FastAPI transit-core stub (health, network, cohorts, optimization hooks)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "httpx>=0.27,<1",
]

[project.scripts]
techto-transit-core = "app.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
